--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,12 @@
 header{
-    background-color: rgb(255, 156, 7);
     box-shadow: 0 0 20px;
 }
 
-body{
-    background-color: rgb(255, 218, 162);
-}
-
 .card{
-    background-color: rgb(255, 174, 52);
+    box-shadow: 5px 5px 5px -1px;
+    height: 300px;
 }
 
-.card-header{
-    background-color: rgb(255, 156, 7);
+.list-unstyled{
+    list-style: none;
 }
